--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,23 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Document</title>
+      <title>Gsap Scroll</title>
       <link rel="stylesheet" href="./styles/main.scss" />
    </head>
    <body>
-      content here
+      <section>
+         <h1>Scroll down</h1>
+      </section>
+      <section class="dark">
+         <div class="content">
+            <h2>Lorem ipsum dolor sit.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+         </div>
+         <img src="./img/1.jpg" alt="1" />
+      </section>
+      <section>
+         <h1>Scroll Up</h1>
+      </section>
       <script src="./index.js"></script>
    </body>
 </html>
